--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,8 @@ body {
 	color: black;
 	background-color: #eaf5ff;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	max-width: 1440px;
+	margin: auto;
 }
 
 img {
@@ -56,4 +58,16 @@ a {
 	font-weight: 500;
 	text-shadow: .5px .5px #212128;
 	margin-bottom: 5px;
+	text-decoration-line: underline;
+	text-decoration-thickness: 1px;
+	text-decoration-color: #d2d2d2;
+}
+
+.title-quaternary {
+	font-weight: 500;
+	text-shadow: .5px .5px #212128;
+	margin-bottom: 5px;
+	text-decoration-line: underline;
+	text-decoration-thickness: 1px;
+	text-decoration-color: #d2d2d2;
 }
